--- a/JpegReader/JpegReader.vcxproj
+++ b/JpegReader/JpegReader.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="main.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="avl.h" />
     <ClInclude Include="decoder.h" />
     <ClInclude Include="helper.h" />
   </ItemGroup>
