--- a/JpegReader/JpegReader.vcxproj.filters
+++ b/JpegReader/JpegReader.vcxproj.filters
@@ -29,5 +29,11 @@
     <ClInclude Include="avl.h">
       <Filter>Исходные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="type.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="hex.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
