--- a/JpegReader/JpegReader.vcxproj
+++ b/JpegReader/JpegReader.vcxproj
@@ -146,6 +146,8 @@
     <ClInclude Include="avl.h" />
     <ClInclude Include="decoder.h" />
     <ClInclude Include="helper.h" />
+    <ClInclude Include="hex.h" />
+    <ClInclude Include="type.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
