--- a/JpegReader/JpegReader.vcxproj
+++ b/JpegReader/JpegReader.vcxproj
@@ -143,7 +143,8 @@
     <ClCompile Include="main.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="avl.h" />
+    <ClInclude Include="huffman.h" />
+    <ClInclude Include="bitstream.h" />
     <ClInclude Include="decoder.h" />
     <ClInclude Include="helper.h" />
     <ClInclude Include="hex.h" />
